--- a/package.json
+++ b/package.json
@@ -2,17 +2,16 @@
   "fitbit": {
     "appUUID": "703ed255-0dff-4723-9889-0b08efd64174",
     "appType": "app",
-    "appDisplayName": "FitCoin",
+    "appDisplayName": "CoinFlip",
     "iconFile": "resources/icon.png",
-    "wipeColor": "#607d8b",
+    "wipeColor": "#03a9f4",
     "requestedPermissions": [],
     "buildTargets": [
-      "higgs",
-      "meson"
+      "higgs"
     ],
     "i18n": {
       "en": {
-        "name": "FitCoin"
+        "name": "CoinFlip"
       }
     }
   }
